--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Conway's Game of Life in Javascript",
   "main": "src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r esm"
   },
   "repository": {
     "type": "git",
@@ -18,14 +18,19 @@
   "homepage": "https://github.com/chrisEff/game-of-life-js#readme",
   "devDependencies": {
     "@chriseff/eslint-config": "^2.1.0",
-    "eslint": "^7.18.0",
+    "@types/chai": "^4.2.14",
+    "@types/mocha": "^8.2.0",
+    "chai": "^4.2.0",
+    "eslint": "^7.19.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.1.0",
+    "esm": "^3.2.25",
     "husky": "^4.3.8",
-    "lint-staged": "^10.5.3"
+    "lint-staged": "^10.5.3",
+    "mocha": "^8.2.1"
   },
   "lint-staged": {
     "*.js": "eslint"
@@ -34,5 +39,10 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
+  },
+  "standard": {
+    "env": [
+      "mocha"
+    ]
   }
 }
