--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Conway's Game of Life in Javascript",
   "main": "src/app.js",
   "scripts": {
+    "prepare": "husky install",
     "test": "mocha -r esm"
   },
   "repository": {
@@ -22,17 +23,13 @@
     "@types/mocha": "^9.0.0",
     "chai": "^4.3.4",
     "esm": "^3.2.25",
-    "husky": "^4.3.8",
+    "husky": "^7.0.4",
     "lint-staged": "^10.5.3",
     "mocha": "^9.1.3"
   },
   "lint-staged": {
-    "*.js": "eslint"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+    "*.js": "eslint",
+    "*.mjs": "eslint"
   },
   "standard": {
     "env": [
