--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/app.js",
   "scripts": {
     "prepare": "husky install",
-    "test": "mocha -r esm"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,6 @@
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.0",
     "chai": "^4.3.4",
-    "esm": "^3.2.25",
     "husky": "^7.0.4",
     "lint-staged": "^10.5.3",
     "mocha": "^9.1.3"
