--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "game-of-life-js",
   "version": "1.0.0",
   "description": "Conway's Game of Life in Javascript",
-  "main": "src/app.js",
+  "main": "src/index.js",
   "scripts": {
     "prepare": "husky install",
+    "build": "webpack --mode=production",
+    "start":  "webpack serve --mode=development",
     "test": "mocha"
   },
   "repository": {
@@ -24,15 +26,19 @@
     "chai": "^4.3.4",
     "husky": "^7.0.4",
     "lint-staged": "^10.5.3",
-    "mocha": "^9.1.3"
+    "mocha": "^9.1.3",
+    "webpack": "^5.67.0",
+    "webpack-cli": "^4.9.2"
   },
   "lint-staged": {
-    "*.js": "eslint",
-    "*.mjs": "eslint"
+    "*.js": "eslint"
   },
   "standard": {
     "env": [
       "mocha"
     ]
+  },
+  "dependencies": {
+    "webpack-dev-server": "^4.7.3"
   }
 }
