--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
   },
   "homepage": "https://github.com/chrisEff/game-of-life-js#readme",
   "devDependencies": {
-    "@chriseff/eslint-config": "^3.0.0",
+    "@chriseff/eslint-config": "^3.0.1",
     "@types/chai": "^4.3.0",
-    "@types/mocha": "^9.0.0",
-    "chai": "^4.3.4",
+    "@types/mocha": "^9.1.0",
+    "chai": "^4.3.6",
     "husky": "^7.0.4",
-    "lint-staged": "^10.5.3",
-    "mocha": "^9.1.3",
+    "lint-staged": "^10.5.4",
+    "mocha": "^9.2.0",
     "webpack": "^5.67.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.3"
   },
   "lint-staged": {
     "*.js": "eslint"
@@ -37,8 +38,5 @@
     "env": [
       "mocha"
     ]
-  },
-  "dependencies": {
-    "webpack-dev-server": "^4.7.3"
   }
 }
