--- a/package.json
+++ b/package.json
@@ -1,42 +1,44 @@
 {
-  "name": "game-of-life-js",
-  "version": "1.0.0",
-  "description": "Conway's Game of Life in Javascript",
-  "main": "src/index.js",
-  "scripts": {
-    "prepare": "husky install",
-    "build": "webpack --mode=production",
-    "start":  "webpack serve --mode=development",
-    "test": "mocha"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/chrisEff/game-of-life-js.git"
-  },
-  "author": "Christian Frenzl",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/chrisEff/game-of-life-js/issues"
-  },
-  "homepage": "https://github.com/chrisEff/game-of-life-js#readme",
-  "devDependencies": {
-    "@chriseff/eslint-config": "^3.0.1",
-    "@types/chai": "^4.3.0",
-    "@types/mocha": "^9.1.0",
-    "chai": "^4.3.6",
-    "husky": "^7.0.4",
-    "lint-staged": "^10.5.4",
-    "mocha": "^9.2.0",
-    "webpack": "^5.67.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.3"
-  },
-  "lint-staged": {
-    "*.js": "eslint"
-  },
-  "standard": {
-    "env": [
-      "mocha"
-    ]
-  }
+	"name": "game-of-life-js",
+	"version": "1.0.0",
+	"description": "Conway's Game of Life in Javascript",
+	"main": "src/index.js",
+	"scripts": {
+		"prepare": "husky install",
+		"build": "webpack --mode=production",
+		"start": "webpack serve --mode=development",
+		"test": "mocha"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/chrisEff/game-of-life-js.git"
+	},
+	"author": "Christian Frenzl",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/chrisEff/game-of-life-js/issues"
+	},
+	"homepage": "https://github.com/chrisEff/game-of-life-js#readme",
+	"devDependencies": {
+		"@chriseff/eslint-config": "^3.0.1",
+		"@types/chai": "^4.3.0",
+		"@types/mocha": "^9.1.0",
+		"chai": "^4.3.6",
+		"eslint-config-prettier": "^8.3.0",
+		"husky": "^7.0.4",
+		"lint-staged": "^10.5.4",
+		"mocha": "^9.2.0",
+		"prettier": "^2.5.1",
+		"webpack": "^5.67.0",
+		"webpack-cli": "^4.9.2",
+		"webpack-dev-server": "^4.7.3"
+	},
+	"lint-staged": {
+		"*.js": "eslint"
+	},
+	"standard": {
+		"env": [
+			"mocha"
+		]
+	}
 }
