--- a/package.json
+++ b/package.json
@@ -29,12 +29,13 @@
 		"lint-staged": "^10.5.4",
 		"mocha": "^9.2.0",
 		"prettier": "^2.5.1",
+		"pretty-quick": "^3.1.3",
 		"webpack": "^5.67.0",
 		"webpack-cli": "^4.9.2",
 		"webpack-dev-server": "^4.7.3"
 	},
 	"lint-staged": {
-		"*.js": "eslint"
+		"*.js": "eslint --fix"
 	},
 	"standard": {
 		"env": [
