--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"prepare": "husky install",
 		"build": "webpack --mode=production",
 		"start": "webpack serve --mode=development",
+		"cm": "git-cz",
 		"test": "mocha"
 	},
 	"repository": {
@@ -21,9 +22,13 @@
 	"homepage": "https://github.com/chrisEff/game-of-life-js#readme",
 	"devDependencies": {
 		"@chriseff/eslint-config": "^3.0.1",
+		"@commitlint/cli": "^16.1.0",
+		"@commitlint/config-conventional": "^16.0.0",
+		"@commitlint/cz-commitlint": "^16.1.0",
 		"@types/chai": "^4.3.0",
 		"@types/mocha": "^9.1.0",
 		"chai": "^4.3.6",
+		"commitizen": "^4.2.4",
 		"eslint-config-prettier": "^8.3.0",
 		"husky": "^7.0.4",
 		"lint-staged": "^10.5.4",
