--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
 	"name": "game-of-life-js",
-	"version": "1.0.0",
+	"version": "0.0.0",
 	"description": "Conway's Game of Life in Javascript",
 	"main": "src/index.js",
 	"author": "Christian Frenzl",
 	"license": "MIT",
 	"homepage": "https://github.com/chrisEff/game-of-life-js#readme",
+	"private": true,
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/chrisEff/game-of-life-js.git"
@@ -25,6 +26,8 @@
 		"@commitlint/cli": "^16.1.0",
 		"@commitlint/config-conventional": "^16.0.0",
 		"@commitlint/cz-commitlint": "^16.1.0",
+		"@semantic-release/changelog": "^6.0.1",
+		"@semantic-release/git": "^10.0.1",
 		"@types/chai": "^4.3.0",
 		"@types/mocha": "^9.1.0",
 		"chai": "^4.3.6",
@@ -35,6 +38,7 @@
 		"mocha": "^9.2.0",
 		"prettier": "^2.5.1",
 		"pretty-quick": "^3.1.3",
+		"semantic-release": "^19.0.2",
 		"webpack": "^5.68.0",
 		"webpack-cli": "^4.9.2",
 		"webpack-dev-server": "^4.7.4"
