--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"chai": "^4.3.6",
 		"commitizen": "^4.2.4",
 		"eslint-config-prettier": "^8.3.0",
+		"gh-pages": "^3.2.3",
 		"husky": "^7.0.4",
 		"lint-staged": "^12.3.3",
 		"mocha": "^9.2.0",
