--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -24,8 +24,11 @@ jobs:
       - name: install dependencies
         run: yarn
 
+      - name: build
+        run: yarn build
+
       - name: execute semantic-release
-        run: npx semantic-release
+        run: yarn semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
