--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@commitlint/config-conventional": "^16.0.0",
 		"@commitlint/cz-commitlint": "^16.1.0",
 		"@semantic-release/changelog": "^6.0.1",
+		"@semantic-release/exec": "^6.0.3",
 		"@semantic-release/git": "^10.0.1",
 		"@types/chai": "^4.3.0",
 		"@types/mocha": "^9.1.0",
