--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
 		"test": "mocha"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.17.2",
+		"@babel/eslint-parser": "^7.17.0",
 		"@chriseff/eslint-config": "^3.0.2",
 		"@commitlint/cli": "^16.2.1",
 		"@commitlint/config-conventional": "^16.2.1",
