--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "1.3.2",
 	"description": "Conway's Game of Life in Javascript",
 	"main": "src/index.js",
+	"type": "module",
 	"author": "Christian Frenzl",
 	"license": "MIT",
 	"homepage": "https://github.com/chrisEff/game-of-life-js#readme",
