chore: add some shortcuts to package.json scripts

--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
 	},
 	"scripts": {
 		"prepare": "husky install",
+		"b": "yarn build",
 		"build": "webpack --mode=production",
+		"s": "yarn start",
 		"start": "webpack serve --mode=development",
 		"cm": "git-cz",
+		"t": "yarn test",
 		"test": "mocha"
 	},
 	"devDependencies": {
