chore: add `HUSKY=0` before `semantic-release` command so new `prepare-commit-msg` hook doesn't break the release

--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -25,7 +25,7 @@ jobs:
         run: yarn
 
       - name: execute semantic-release
-        run: yarn semantic-release
+        run: HUSKY=0 yarn semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
