--- a/.eslintrc
+++ b/.eslintrc
@@ -5,8 +5,9 @@
 		"browser": true,
 		"mocha": true
 	},
-	"plugins": ["unicorn"],
+	"plugins": ["prettier", "unicorn"],
 	"rules": {
+		"prettier/prettier": "error",
 		"unicorn/no-lonely-if": "error",
 		"unicorn/no-nested-ternary": "error",
 		"unicorn/no-new-array": "error",
