--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
 	"devDependencies": {
 		"@babel/core": "^7.21.8",
 		"@babel/eslint-parser": "^7.21.8",
-		"@chriseff/eslint-config": "^3.0.4",
 		"@commitlint/cli": "^17.6.3",
 		"@commitlint/config-conventional": "^17.6.3",
 		"@commitlint/cz-commitlint": "^17.5.0",
@@ -38,15 +37,19 @@
 		"@types/mocha": "^10.0.1",
 		"chai": "^4.3.7",
 		"commitizen": "^4.3.0",
+		"eslint": "^8.43.0",
 		"eslint-config-prettier": "^8.8.0",
+		"eslint-config-standard": "^17.1.0",
+		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-n": "^16.0.0",
 		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-promise": "^6.1.1",
 		"eslint-plugin-unicorn": "^47.0.0",
 		"gh-pages": "^4.0.0",
 		"husky": "^8.0.3",
 		"lint-staged": "^13.2.2",
 		"mocha": "^10.2.0",
 		"prettier": "^2.8.8",
-		"pretty-quick": "^3.1.3",
 		"semantic-release": "^21.0.2",
 		"webpack": "^5.82.1",
 		"webpack-cli": "^5.1.1",
