--- a/package.json
+++ b/package.json
@@ -25,33 +25,33 @@
 		"test": "mocha"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.22.5",
-		"@babel/eslint-parser": "^7.22.5",
-		"@commitlint/cli": "^17.6.5",
-		"@commitlint/config-conventional": "^17.6.5",
-		"@commitlint/cz-commitlint": "^17.5.0",
+		"@babel/core": "^7.23.2",
+		"@babel/eslint-parser": "^7.22.15",
+		"@commitlint/cli": "^18.0.0",
+		"@commitlint/config-conventional": "^18.0.0",
+		"@commitlint/cz-commitlint": "^18.0.0",
 		"@semantic-release/changelog": "^6.0.3",
 		"@semantic-release/exec": "^6.0.3",
 		"@semantic-release/git": "^10.0.1",
-		"@types/chai": "^4.3.5",
-		"@types/mocha": "^10.0.1",
-		"chai": "^4.3.7",
+		"@types/chai": "^4.3.9",
+		"@types/mocha": "^10.0.3",
+		"chai": "^4.3.10",
 		"commitizen": "^4.3.0",
-		"eslint": "^8.43.0",
-		"eslint-config-prettier": "^8.8.0",
-		"eslint-config-standard": "^17.1.0",
-		"eslint-plugin-import": "^2.27.5",
-		"eslint-plugin-n": "^16.0.0",
-		"eslint-plugin-prettier": "^4.2.1",
+		"eslint": "^8.52.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-config-standard": "latest",
+		"eslint-plugin-import": "^2.28.1",
+		"eslint-plugin-n": "^16.2.0",
+		"eslint-plugin-prettier": "^5.0.1",
 		"eslint-plugin-promise": "^6.1.1",
-		"eslint-plugin-unicorn": "^47.0.0",
-		"gh-pages": "^5.0.0",
+		"eslint-plugin-unicorn": "^48.0.1",
+		"gh-pages": "^6.0.0",
 		"husky": "^8.0.3",
-		"lint-staged": "^13.2.2",
+		"lint-staged": "^15.0.2",
 		"mocha": "^10.2.0",
-		"prettier": "^2.8.8",
-		"semantic-release": "^21.0.5",
-		"webpack": "^5.87.0",
+		"prettier": "^3.0.3",
+		"semantic-release": "^22.0.5",
+		"webpack": "^5.89.0",
 		"webpack-cli": "^5.1.4",
 		"webpack-dev-server": "^4.15.1"
 	},
@@ -60,5 +60,5 @@
 			"mocha"
 		]
 	},
-	"packageManager": "yarn@3.5.1"
+	"packageManager": "yarn@3.6.4"
 }
