chore: adjustments for eslint flat config

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@commitlint/cli": "^19.3.0",
 		"@commitlint/config-conventional": "^19.2.2",
 		"@commitlint/cz-commitlint": "^19.2.0",
+		"@eslint/js": "^9.2.0",
 		"@semantic-release/changelog": "^6.0.3",
 		"@semantic-release/exec": "^6.0.3",
 		"@semantic-release/git": "^10.0.1",
@@ -46,6 +47,7 @@
 		"eslint-plugin-promise": "^6.1.1",
 		"eslint-plugin-unicorn": "^52.0.0",
 		"gh-pages": "^6.1.1",
+		"globals": "^15.2.0",
 		"husky": "^9.0.11",
 		"lint-staged": "^15.2.2",
 		"mocha": "^10.4.0",
