--- a/package.json
+++ b/package.json
@@ -25,37 +25,37 @@
 		"test": "mocha"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.24.5",
-		"@babel/eslint-parser": "^7.24.5",
-		"@commitlint/cli": "^19.3.0",
-		"@commitlint/config-conventional": "^19.2.2",
-		"@commitlint/cz-commitlint": "^19.2.0",
-		"@eslint/js": "^9.2.0",
+		"@babel/core": "^7.26.0",
+		"@babel/eslint-parser": "^7.25.9",
+		"@commitlint/cli": "^19.6.0",
+		"@commitlint/config-conventional": "^19.6.0",
+		"@commitlint/cz-commitlint": "^19.5.0",
+		"@eslint/js": "^9.16.0",
 		"@semantic-release/changelog": "^6.0.3",
 		"@semantic-release/exec": "^6.0.3",
 		"@semantic-release/git": "^10.0.1",
-		"@types/chai": "^4.3.16",
-		"@types/mocha": "^10.0.6",
-		"chai": "^5.1.1",
-		"commitizen": "^4.3.0",
-		"eslint": "^9.2.0",
+		"@types/chai": "^5.0.1",
+		"@types/mocha": "^10.0.10",
+		"chai": "^5.1.2",
+		"commitizen": "^4.3.1",
+		"eslint": "^9.16.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-config-standard": "latest",
-		"eslint-plugin-import": "^2.29.1",
-		"eslint-plugin-n": "^17.5.1",
-		"eslint-plugin-prettier": "^5.1.3",
-		"eslint-plugin-promise": "^6.1.1",
-		"eslint-plugin-unicorn": "^52.0.0",
-		"gh-pages": "^6.1.1",
-		"globals": "^15.2.0",
-		"husky": "^9.0.11",
-		"lint-staged": "^15.2.2",
-		"mocha": "^10.4.0",
-		"prettier": "^3.2.5",
-		"semantic-release": "^23.0.8",
-		"webpack": "^5.91.0",
+		"eslint-plugin-import": "^2.31.0",
+		"eslint-plugin-n": "^17.14.0",
+		"eslint-plugin-prettier": "^5.2.1",
+		"eslint-plugin-promise": "^7.2.1",
+		"eslint-plugin-unicorn": "^56.0.1",
+		"gh-pages": "^6.2.0",
+		"globals": "^15.13.0",
+		"husky": "^9.1.7",
+		"lint-staged": "^15.2.10",
+		"mocha": "11.0.1",
+		"prettier": "^3.4.2",
+		"semantic-release": "^24.2.0",
+		"webpack": "^5.97.1",
 		"webpack-cli": "^5.1.4",
-		"webpack-dev-server": "^5.0.4"
+		"webpack-dev-server": "^5.1.0"
 	},
 	"standard": {
 		"env": [
