--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
 		"webpack-cli": "^5.1.4",
 		"webpack-dev-server": "^5.1.0"
 	},
+	"resolutions": {
+		"conventional-changelog-conventionalcommits": ">= 8.0.0"
+	},
 	"standard": {
 		"env": [
 			"mocha"
